# sql2gpt

./: .gitignore  .gptignore  CLAUDE.md  Pipfile  README.md  config.py  pyproject.toml  sql2gpt.py  util.py
src/sql2gpt/: __init__.py  mcp_server.py  query.py
tapes/: demo.tape
