[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sql2gpt"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A tool to extract SQL database schema and generate ChatGPT prompts"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["sql", "chatgpt", "database", "schema"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["sqlalchemy", "psycopg2-binary", "mysqlclient", "fire"]
version = "0.2.0"

[project.urls]
Source = "https://github.com/chand1012/sql2gpt"

[project.scripts]
sql2gpt = "sql2gpt:main"
