[project]
name = "sql2gpt"
version = "0.3.1"
description = "A tool to extract the schema of SQL databases and generate prompts for ChatGPT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "fire",
    "pymysql",
    "fastmcp",
    "sqlparse",
]

[project.scripts]
sql2gpt = "sql2gpt:main"
sql2gpt-mcp = "sql2gpt.mcp_server:main"

[dependency-groups]
dev = [
    "autopep8",
    "build",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql2gpt"]
